# iec-checker

./: .dockerignore  .gitignore  Dockerfile  build.sh  build_docker.sh  server.py
src/analysis/: dune  unused_variable.ml
src/core/: ast_util.ml  cfg.ml  syntax.ml  syntax.mli  warn.ml  warn.mli
src/lib/: checkerLib.ml  dune  plcopen_cp1.ml  plcopen_cp13.ml  plcopen_cp2.ml  plcopen_cp2.mli  plcopen_cp25.ml  plcopen_cp25.mli  plcopen_cp28.ml  plcopen_cp3.ml  plcopen_cp6.ml  plcopen_cp8.ml  plcopen_cp9.ml  plcopen_l10.ml  plcopen_l17.ml  plcopen_n3.ml
src/parser/: dune  lexer.mll  parser.mly
test/plcopen/: cp1.st  cp2.st  cp3.st  cp8.st
test/st/: plcopen-cp25.st  plcopen-cp28.st
