(library
 (name IECCheckerParser)
 (public_name iec_checker.parser)
 (synopsis "Provides an interface for processing the IEC61131-3 source code")
 (libraries core menhirLib iec_checker.core))

(menhir
 (modules parser)
 (flags ("--dump" "--explain" "--unused-tokens" "--unused-precedence-levels")))
 ; (flags ("--dump" "--explain" "--trace")))

(ocamllex
 (modules lexer))

; Make warnings non-fatal. This is required while parser is WIP.
(env (dev (flags (:standard -w -A -warn-error -A))))
